--- a/autocare-api/appsettings.Development.json
+++ b/autocare-api/appsettings.Development.json
@@ -3,6 +3,10 @@
     "DefaultConnection": "Host=ep-raspy-mud-adhr0umi-pooler.c-2.us-east-1.aws.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_x2SejucP8qGs;SSL Mode=VerifyFull;Trust Server Certificate=true;Channel Binding=Require;"
   },
 
+  "OpenCage": {
+    "ApiKey": "ee8a920b9a184e98ad88b3cbaf82cbe4"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
