Add Notification Handler

--- a/autocare-api/appsettings.Development.json
+++ b/autocare-api/appsettings.Development.json
@@ -1,10 +1,24 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=ep-raspy-mud-adhr0umi-pooler.c-2.us-east-1.aws.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_x2SejucP8qGs;SSL Mode=VerifyFull;Trust Server Certificate=true;Channel Binding=Require;"
+     "DefaultConnection": "Host=ep-raspy-mud-adhr0umi-pooler.c-2.us-east-1.aws.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_x2SejucP8qGs;SSL Mode=VerifyFull;Trust Server Certificate=true;Channel Binding=Require;"
+    //"DefaultConnection": "Host=autocare-db.clrfxw4otpxy.us-east-1.rds.amazonaws.com;Port=5432;Database=autocare-db;Username=postgres;Password=abc12345;SSL Mode=Require;"
   },
 
   "OpenCage": {
     "ApiKey": "ee8a920b9a184e98ad88b3cbaf82cbe4"
+  },
+
+
+  "FrontendBaseUrl": "http://localhost:3000",
+
+  "Email": {
+    "Smtp": {
+      "From": "zrchen2004@gmail.com",
+      "Host": "smtp.gmail.com",
+      "Port": "587",
+      "User": "zrchen2004@gmail.com",
+      "Password": "wwksjhymvjvtdxen"
+    }
   },
 
   "Logging": {
