--- a/autocare-api/appsettings.json
+++ b/autocare-api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "AWS": {
+    "Region": "us-east-1",
+    "SnsTopicArn": "arn:aws:sns:us-east-1:468057923121:autocare-notifications"
+  }
 }
+
