--- a/autocare-api/autocare-api.csproj
+++ b/autocare-api/autocare-api.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="AWSSDK.Core" Version="4.0.3.6" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="4.0.3.17" />
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="4.0.2.10" />
+    <PackageReference Include="MailKit" Version="4.14.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
