Fix CORS and backend configuration

--- a/autocare-api/appsettings.Development.json
+++ b/autocare-api/appsettings.Development.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-     "DefaultConnection": "Host=ep-raspy-mud-adhr0umi-pooler.c-2.us-east-1.aws.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_x2SejucP8qGs;SSL Mode=VerifyFull;Trust Server Certificate=true;Channel Binding=Require;"
-    //"DefaultConnection": "Host=autocare-db.clrfxw4otpxy.us-east-1.rds.amazonaws.com;Port=5432;Database=autocare-db;Username=postgres;Password=abc12345;SSL Mode=Require;"
+    "DefaultConnection": "Host=autocare-db.clrfxw4otpxy.us-east-1.rds.amazonaws.com;Port=5432;Database=postgres;Username=postgres;Password=abc12345;Ssl Mode=Require;"
   },
 
   "OpenCage": {
